Fixed chat overflow styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  height: 100%;
   text-align: center;
   display: flex;
   background-color: #282c34;
@@ -40,6 +41,8 @@
 }
 
 .chat-log {
+  overflow-y: auto;
+  height: 90vh;
   padding:24px;
   text-align:left;
 }
@@ -78,7 +81,7 @@
 
 .chat-input-container {
   padding:12px;
-  position:absolute;
+  position:sticky;
   bottom:0; left:0 ; right:0;
 }
 .chat-input-textarea {
